--- a/IMPA_tuning.ipynb
+++ b/IMPA_tuning.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-02T20:59:06.860960Z",
+     "start_time": "2023-07-02T20:59:06.591714Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from anti_qsweepy.drivers import *\n",
@@ -40,16 +45,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-02T20:59:38.327052Z",
+     "start_time": "2023-07-02T20:59:38.243976Z"
+    }
+   },
    "outputs": [],
    "source": [
     "na = Agilent_PNA.NetworkAnalyzer('PNA-X')\n",
     "#na = RS_ZNB20.NetworkAnalyzer('ZNB20')\n",
     "#bias_source = Keithley_2400.CurrentSource('2400')\n",
-    "bias_source = Keithley_6221.CurrentSource('GPIB0::10::INSTR')\n",
+    "#bias_source = Keithley_6221.CurrentSource('GPIB0::10::INSTR')\n",
     "#bias_source = Keithley_2651.MagnetSupply(\"NNDAC\", rate = 1.)\n",
-    "pump = Agilent_PSG.Generator('Generator_E8257D')"
+    "pump = Agilent_PSG.Generator('TCPIP0::10.1.0.79::inst0::INSTR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-02T21:00:13.890956Z",
+     "start_time": "2023-07-02T21:00:13.871938Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pump.power(0.55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-02T21:15:33.334634Z",
+     "start_time": "2023-07-02T21:15:33.327628Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pump.output('on')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-02T21:00:59.430443Z",
+     "start_time": "2023-07-02T21:00:59.420433Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14300000000.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pump.freq(14.3e9)"
    ]
   },
   {
@@ -961,7 +1046,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -975,7 +1060,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
